test/Parse/isolated_any.code
// RUN: %target-typecheck-verify-language -disable-availability-checking

// REQUIRES: asserts

typealias FnType = @isolated(any) () -> ()

fn testInParameter(function: @isolated(any) () -> ()) {}

fn testLookahead() {
  immutable array = [@isolated(any) () -> ()]()
  _ = array
}

fn testInvalidIsolation(_ x: @isolated(foo) () -> Void) {}
// expected-error@-1 {{expected 'any' as the isolation kind}} {{42-45=any}}
